@@ -1106,10 +1106,6 @@ $wgMessageStructure = array(
 		'protectedtitlesempty',
 		'listusers',
 		'listusers-summary',
-		'specialpages',
-		'specialpages-summary',
-		'spheading',
-		'restrictedpheading',
 		'newpages',
 		'newpages-summary',
 		'newpages-username',
@@ -1123,6 +1119,13 @@ $wgMessageStructure = array(
 		'notargettext',
 		'pager-newer-n',
 		'pager-older-n',
+	),
+	'specialspecialpages' => array(
+		'specialpages',
+		'specialpages-summary',
+		'specialpages-other',
+		'restrictedpheading',
+		'specialpages-tpl',
 	),
 	'booksources' => array(
 		'booksources',
@@ -2449,6 +2452,7 @@ XHTML id names.",
 	'withoutinterwiki'    => '',
 	'fewestrevisions'     => '',
 	'specialpages'        => 'Miscellaneous special pages',
+	'specialspecialpages' => 'Special:Specialpages',
 	'booksources'         => 'Book sources',
 	'specialpages2'       => '',
 	'logpages'            => 'Special:Log',
